# esp-weather

./: .gitignore  Cargo.toml  Readme.md  build.rs  sdkconfig.defaults  wokwi.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
examples/: tmp.rs
src/: constants.rs  icons.rs  image_tri_color.rs  lib.rs  main.rs  text.rs  wifi.rs
src/weather/: mod.rs
