[package]
name = "esp-weather"
version = "0.1.0"
authors = ["LWi <leonhard.wiedmann@varmeco.de>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp-weather"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
epd-waveshare = {version = "0.6.0"}
embedded-graphics = "0.8.1"
anyhow = "1.0.95"
smol = "2.0.2"
embedded-svc = "0.28.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
chrono = "0.4.39"
u8g2-fonts = "0.5.1"
thiserror = "2.0.11"
# tokio = { version = "1.43", features = ["rt", "net", "io-util"] }# reqwest = "0.12.12"

[build-dependencies]
embuild = "0.33"
