[package]
name = "esp-weather"
version = "0.1.0"
authors = ["LWi <leonhard.wiedmann@varmeco.de>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp-weather"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4.28"
epd-waveshare = {version = "0.6.0"}
embedded-graphics = "0.8.1"
anyhow = "1.0.100"
# smol = "2.0.2"
embedded-svc = "0.28.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = "0.4.42"
u8g2-fonts = "0.7.2"
thiserror = "2.0.17"
embedded-weather-icons = {git = "https://github.com/marcelbuesing/embedded-weather-icons", features = ["icons32x32"]}
smol = "2.0.2"

[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-svc = { version = "0.51", features = ["critical-section"] }

[target.'cfg(target_os = "linux")'.dependencies]
tracing-subscriber = "0.3.20"
embedded-graphics-simulator = "0.8.0"
reqwest = "0.12.24"
tokio = {version = "1.48.0", features = ["full"]}
# tokio = { version = "1.43", features = ["rt", "net", "io-util"] }# reqwest = "0.12.12"

[build-dependencies]
embuild = {version = "0.33.1", features = ["espidf"]}
